# linuxMD

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Modelfile.linuxmd  README.NEXT.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: RELEASE_CHECKLIST.md  analysis-model.md  architecture.md  collectors.md  performance.md  providers.md  remote-collection.md  roadmap.md  schema.md  security.md
src/linuxmd/: __init__.py  __main__.py  analysis.py  analysis_evidence.py  analysis_payload.py  analysis_prompt.py  analysis_repair.py  analysis_schema.py  cli.py  health_report.py  local.py  paths.py  providers.py  workflows.py
src/linuxmd/collectors/: __init__.py  base.py  performance.py  security.py  system.py
src/linuxmd/collectors/vendors/: __init__.py
src/linuxmd/collectors/vendors/intel/: __init__.py  msr.py  tdx.py
src/linuxmd/diagnostics/: __init__.py  evidence.py  models.py  performance_findings.py  performance_models.py  performance_parsers.py  runner.py  security.py  writer.py
src/linuxmd/remote/: __init__.py  ssh.py
tests/: conftest.py  test_analysis.py  test_analysis_payload.py  test_analysis_repair.py  test_analyze_cli.py  test_cli.py  test_health_report.py  test_intel_tdx.py  test_local.py  test_performance_collector.py  test_performance_interpretation.py  test_performance_parsers.py  test_providers.py  test_runner.py  test_security_analyzer.py  test_security_collector.py  test_ssh.py  test_system_collector.py  test_workflows.py
