[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linuxmd"
version = "0.1.0a0"
description = "System-scale analysis for Linux infrastructure using structured evidence and validated health assessments."
keywords = [
    "linux",
    "diagnostics",
    "observability",
    "performance",
    "security",
    "llm",
    "ai-infrastructure",
]
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "LinuxMD Contributors" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27,<1",
  "typer>=0.12.5,<1.0",
]

[project.scripts]
linuxmd = "linuxmd.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.8,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/linuxmd"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
